# moneyforward-checker

./: .gitignore  auth.py  drive.py  gmail.py  main.py  mfsync.py  moneyforward.py  parameter.py  pyproject.toml  requirements.txt  spreadsheet.py  sssync.py  transfer.py  withdrawal.py
.github/workflows/: lambda.yml
