[tool.poetry]
name = "moneyforward-checker"
version = "0.1.0"
description = ""
authors = ["roto5296 <hikun5296@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "*"
mfscraping = {git = "https://github.com/roto5296/moneyforward-scraping-py.git"}

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 99